# habbits_tracker

./: .env.sample  .flake8  Dockerfile  Dockerfile.celery  README.md  db.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py  views.py
habits/: __init__.py  admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
habits/tests/: test_models.py  test_serializers.py  test_validators.py  test_views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
