[tool.poetry]
name = "habbits-tracker"
version = "0.1.0"
description = ""
authors = ["nikitt <nikittaosipov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
django = "^5.1.4"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
